@@ -89,10 +89,10 @@ class P4A_Simple_Toolbar extends P4A_Toolbar
 	{
 		$this->_mask_name = $mask->getName();
 
-		$this->buttons->save->implementMethod('onClick', $mask, 'saveRow');
-		$this->buttons->cancel->implementMethod('onClick', $mask, 'reloadRow');
-		$this->buttons->new->implementMethod('onClick', $mask, 'newRow');
-		$this->buttons->delete->implementMethod('onClick', $mask, 'deleteRow');
-		$this->buttons->exit->implementMethod('onClick', $mask, 'showPrevMask');
+		$this->buttons->save->implement('onClick', $mask, 'saveRow');
+		$this->buttons->cancel->implement('onClick', $mask, 'reloadRow');
+		$this->buttons->new->implement('onClick', $mask, 'newRow');
+		$this->buttons->delete->implement('onClick', $mask, 'deleteRow');
+		$this->buttons->exit->implement('onClick', $mask, 'showPrevMask');
 	}
 }
